# TerminaalDash

./: .env-example  Cargo.toml  README.md  reminders.json  schedule.json  stocks.txt
src/: app.rs  github.rs  main.rs  news.rs  overlay.rs  schedule.rs  shared.rs  stocks.rs  ui.rs  weather.rs
